Bug 344038 - Wrong vendor release number
Summary: Wrong vendor release number
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: OpenGL (other bugs)
Version First Reported In: 4.11.10
Platform: Debian unstable Linux
: NOR minor
Target Milestone: ---
Assignee: David Hubner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-02-11 14:42 UTC by Lorenzo Bona
Modified: 2020-01-22 15:42 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments
xserver version with bad format (139.09 KB, image/png)
2015-03-19 08:49 UTC, Lorenzo Bona
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lorenzo Bona 2015-02-11 14:42:42 UTC
Kinfocenter (4.11.13 with KDE 4.14.2 platform version) outputs wrong format version of xserver.

I'm building xserver from git, and it's current version is 1.17.99. As exposed by
$X -version 
in konsole, but in kinfocenter I see 11,799,000 which is correct, but with a bad format.

I've attached a screenshot to show you the problem.

Reproducible: Always

Steps to Reproduce:
1. Open Kinfocenter
2. Select graphical information
3. Select X-server
Comment 1 Lorenzo Bona 2015-03-19 08:49:30 UTC
Created attachment 91630 [details]
xserver version with bad format
Comment 2 Harald Sitter 2020-01-22 15:42:19 UTC
Git commit 47ec0bdaf1bab09ca59fe8e04f61348c21e272ab by Harald Sitter.
Committed on 22/01/2020 at 15:41.
Pushed by sitter into branch 'Plasma/5.18'.

parse xorg version for nicer display

Summary:
instead of just printing a random integer lets try to print a
nice looking version string. since I couldn't find
cross-implementation documentation on what the format of the
int is, I am going to assume it is vendor specific and guard
the xorg specific parsing behind a guard based on the vendor
string containig x.org
FIXED-IN: 5.18.0

Test Plan: version looks nice in xorg module

Reviewers: mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26730

M  +15   -3    Modules/base/os_base.h

https://commits.kde.org/kinfocenter/47ec0bdaf1bab09ca59fe8e04f61348c21e272ab