parse xorg version for nicer display

Summary:
instead of just printing a random integer lets try to print a
nice looking version string. since I couldn't find
cross-implementation documentation on what the format of the
int is, I am going to assume it is vendor specific and guard
the xorg specific parsing behind a guard based on the vendor
string containig x.org

BUG: 344038
FIXED-IN: 5.18.0

Test Plan: version looks nice in xorg module

Reviewers: mart

Reviewed By: mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26730